--- a/Lesson02-GitHub-Repo-Search/T02.01-Exercise-CreateLayout/app/src/main/res/layout/activity_main.xml
+++ b/Lesson02-GitHub-Repo-Search/T02.01-Exercise-CreateLayout/app/src/main/res/layout/activity_main.xml
@@ -29,21 +29,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!--TODO (6) Delete this TextView-->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="@+id/activity_main"
-        app:layout_constraintLeft_toLeftOf="@+id/activity_main"
-        app:layout_constraintRight_toRightOf="@+id/activity_main"
-        app:layout_constraintTop_toTopOf="@+id/activity_main" />
-
-    <!--TODO (7) Add an EditText-->
-    <!--TODO (8) Give the EditText an id of @+id/et_search_box-->
-    <!--TODO (9) Set the text size to 22sp-->
-    <!--TODO (10) Set the width to match_parent and the height to wrap_content-->
-    <!--TODO (11) Provide a hint telling the user to enter a query and then click search-->
+    <!--TODO (6) Delete this TextView DONE-->
+    
+    <!--TODO (7) Add an EditText DONE-->
+  <EditText>
+    android:id="@+id/et_search_box"
+    android:textSize="22sp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="Type here for query and click search"
+  </EditText>
+    <!--TODO (8) Give the EditText an id of @+id/et_search_box DONE-->
+    <!--TODO (9) Set the text size to 22sp DONE-->
+    <!--TODO (10) Set the width to match_parent and the height to wrap_content DONE-->
+    <!--TODO (11) Provide a hint telling the user to enter a query and then click search DONE-->
 
     <!--TODO (12) Add a TextView-->
     <!--TODO (13) Give the TextView an id of @+id/tv_url_display-->
