--- a/Lesson02-GitHub-Repo-Search/T02.01-Exercise-CreateLayout/app/src/main/res/layout/activity_main.xml
+++ b/Lesson02-GitHub-Repo-Search/T02.01-Exercise-CreateLayout/app/src/main/res/layout/activity_main.xml
@@ -44,12 +44,20 @@
     <!--TODO (10) Set the width to match_parent and the height to wrap_content DONE-->
     <!--TODO (11) Provide a hint telling the user to enter a query and then click search DONE-->
 
-    <!--TODO (12) Add a TextView-->
-    <!--TODO (13) Give the TextView an id of @+id/tv_url_display-->
-    <!--TODO (14) Set the text size to 22sp-->
-    <!--TODO (15) Set the width to wrap_content and the height to wrap_content-->
-    <!--TODO (16) Give the TextView a top margin of 8dp-->
-    <!--TODO (17) Set the text to tell the user their search URL will show up here when they click search-->
+    <!--TODO (12) Add a TextView DONE-->
+  <TextView>
+    android:id="@+id/tv_url_display"
+    android:textSize="22sp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:margin_top="8dp"
+    android:text="Search URL will be here after clicking search"
+  </TextView>
+    <!--TODO (13) Give the TextView an id of @+id/tv_url_display DONE-->
+    <!--TODO (14) Set the text size to 22sp DONE-->
+    <!--TODO (15) Set the width to wrap_content and the height to wrap_content DONE-->
+    <!--TODO (16) Give the TextView a top margin of 8dp DONE-->
+    <!--TODO (17) Set the text to tell the user their search URL will show up here when they click search DONE-->
 
     <!--TODO (18) Add a ScrollView-->
     <!--TODO (19) Set the width to match_parent and the height to wrap_content-->
