--- a/Lesson02-GitHub-Repo-Search/T02.01-Exercise-CreateLayout/app/src/main/res/layout/activity_main.xml
+++ b/Lesson02-GitHub-Repo-Search/T02.01-Exercise-CreateLayout/app/src/main/res/layout/activity_main.xml
@@ -59,14 +59,26 @@
     <!--TODO (16) Give the TextView a top margin of 8dp DONE-->
     <!--TODO (17) Set the text to tell the user their search URL will show up here when they click search DONE-->
 
-    <!--TODO (18) Add a ScrollView-->
-    <!--TODO (19) Set the width to match_parent and the height to wrap_content-->
-    <!--TODO (20) Set the top margin to 16dp-->
-
-        <!--TODO (21) Within the ScrollView, add a TextView-->
-        <!--TODO (22) Give the TextView an id of @+id/tv_github_search_results_json-->
-        <!--TODO (23) Set the text size to 18sp-->
-        <!--TODO (24) Set the height and width to wrap_content-->
-        <!--TODO (25) Set the text to something that tells the user to make a search-->
+    <!--TODO (18) Add a ScrollView DONE-->
+    <!--TODO (19) Set the width to match_parent and the height to wrap_content DONE-->
+    <!--TODO (20) Set the top margin to 16dp DONE-->
+    <ScrollView>
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:margin_top="16dp"
+      
+      <TextView>
+        android:id="@+id/tv_github_search_results_json"
+        android:textSize="18sp"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:text="Search for something..."
+      </TextView>
+  </ScrollView>
+        <!--TODO (21) Within the ScrollView, add a TextView DONE-->
+        <!--TODO (22) Give the TextView an id of @+id/tv_github_search_results_json DONE-->
+        <!--TODO (23) Set the text size to 18sp DONE-->
+        <!--TODO (24) Set the height and width to wrap_content DONE-->
+        <!--TODO (25) Set the text to something that tells the user to make a search DONE-->
 
 </LinearLayout>
