--- a/Lesson06-Visualizer-Preferences/T06.09-Exercise-EditTextPreference/app/src/main/res/xml/pref_visualizer.xml
+++ b/Lesson06-Visualizer-Preferences/T06.09-Exercise-EditTextPreference/app/src/main/res/xml/pref_visualizer.xml
@@ -23,8 +23,14 @@
         android:summaryOn="@string/pref_show_true"
         android:title="@string/pref_show_treble_label" />
 
-    <!-- TODO (1) Add and EditTextPreference with all of the appropriate strings stored in strings.xml.
+    <!-- TODO (1) Add and EditTextPreference with all of the appropriate strings stored in strings.xml. DONE
         It should have a key, default value of 1 and title -->
+
+    <EditTextPreference
+        android:defaultValue="@string/pref_edit_def_value"
+        android:key="@string/pref_edit_text_key"
+        android:title="@string/pref_edit_title"
+        />
 
     <ListPreference
         android:defaultValue="@string/pref_color_red_value"
